# aron

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml  test.c  test.macos.s  test.s
src/: cli.rs  instructions.rs  main.rs  number.rs
src/assembler/: label.rs  mod.rs  section.rs
src/parse/: encodings.rs  generate_instructions.py  helpers.rs  lexer.rs  mod.rs  parser.rs  tests.rs
