[package]
name = "aron"
version = "0.1.0"
edition = "2021"
authors = ["Not-Nik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1"
enum_derive = "0.1"
custom_derive = "0.1"
object = { version = "0.28", features = ["write"] }
clap = { version = "3.2.17", features = ["cargo"] }
